<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_corner_radius"
        android:padding="@dimen/_15sdp">

        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvHeader"
                android:layout_width="@dimen/space_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/would_you_like_to_repeat_last_customisation"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgClose"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:padding="@dimen/_2sdp"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:tint="@color/color_0FB7B4" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLastItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.5"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llHeader"
            tools:text="kjadkadklfmaldf lajldk fjaldksjf ladj lfajd faj" />

        <LinearLayout
            android:id="@+id/llButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLastItems">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCustomize"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_round_full_blue"
                android:gravity="center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/customize"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="normal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRepeat"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_round_full_blue"
                android:gravity="center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/repeat"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="normal" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
