<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20sdp"
        tools:context=".view.home.view.MainActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_cleaning"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvInsideTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/home_cleaning"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/home_cleaning"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvInsideTitle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/tvInsideTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <LinearLayout
                android:id="@+id/llPlusMinus"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/bg_round_blue"
                android:gravity="center"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imgMinus"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_minus"
                    app:tint="@color/black" />

                <View
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"
                    android:background="@color/color_0FB7B4" />

                <TextView
                    android:id="@+id/tvCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"
                    android:background="@color/color_0FB7B4" />

                <ImageView
                    android:id="@+id/imgPlus"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_plus"
                    app:tint="@color/black" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCustomize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_blue"
                android:paddingStart="@dimen/_7sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_7sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/customize"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="normal" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clViewCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_round_full_blue"
            android:paddingStart="@dimen/_7sdp"
            android:paddingTop="@dimen/_4sdp"
            android:paddingEnd="@dimen/_7sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icNotification"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_6sdp"
                    android:src="@drawable/ic_cart"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llNotificationCount"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:background="@drawable/bg_notification_red"
                    android:gravity="center"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvNotificaionCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_8ssp"
                        android:textStyle="normal"
                        tools:text="2" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvViewCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/view_cart"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/clCart"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>